<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/color_gray"
    android:columnCount="2"
    android:rowCount="1" >

    <GridLayout
        android:columnCount="6"
        android:orientation="vertical"
        android:rowCount="5"
        android:useDefaultMargins="false" >

        <!-- row 0 -->

        <ImageButton
            android:id="@+id/bg"
            style="@style/ResidenceBg"
            android:layout_column="0"
            android:layout_columnSpan="5"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:layout_rowSpan="3"
            android:background="@drawable/residence_bg_castle"
            android:contentDescription="@string/gField"
            android:scaleType="fitXY"
            android:src="@drawable/transparent" />

        <ImageButton
            android:id="@+id/exit"
            style="@style/GlobalFieldCell"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_row="0"
            android:background="@drawable/transparent"
            android:contentDescription="@string/gField"
            android:scaleType="fitXY"
            android:src="@drawable/icon_exit" />

        <ImageButton
            android:id="@+id/field_5_0"
            style="@style/GlobalFieldCell"
            android:layout_column="5"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:background="@drawable/controls_contract"
            android:contentDescription="@string/gField"
            android:scaleType="fitXY" />

        <!-- row 1 -->

        <ImageButton
            android:id="@+id/field_5_1"
            style="@style/GlobalFieldCell"
            android:layout_column="5"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:background="@drawable/controls_siege_0"
            android:contentDescription="@string/gField"
            android:scaleType="fitXY" />

        <!-- row 2 -->

        <ImageButton
            android:id="@+id/temp01"
            style="@style/GlobalFieldCell"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_row="2"
            android:background="@drawable/transparent"
            android:contentDescription="@string/gField"
            android:scaleType="fitXY"
            android:src="@drawable/transparent" />

        <ImageButton
            android:id="@+id/unit"
            style="@style/GlobalFieldCell"
            android:layout_column="1"
            android:layout_row="2"
            android:background="@drawable/transparent"
            android:contentDescription="@string/gField"
            android:scaleType="fitXY"
            android:src="@drawable/transparent" />

        <ImageButton
            android:id="@+id/field_5_2"
            style="@style/GlobalFieldCell"
            android:layout_column="5"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:background="@drawable/controls_magic_0"
            android:contentDescription="@string/gField"
            android:scaleType="fitXY" />
        <!-- row 3 -->

        <ImageButton
            android:id="@+id/field_5_3"
            style="@style/GlobalFieldCell"
            android:layout_column="5"
            android:layout_gravity="left|top"
            android:layout_row="3"
            android:background="@drawable/controls_pasle_opened"
            android:contentDescription="@string/gField"
            android:scaleType="fitXY" />
        <!-- row 4 -->

        <ImageButton
            android:id="@+id/field_5_4"
            style="@style/GlobalFieldCell"
            android:layout_column="5"
            android:layout_gravity="left|top"
            android:layout_row="4"
            android:background="@drawable/controls_money"
            android:contentDescription="@string/gField"
            android:scaleType="fitXY" />
        <!-- info -->

        <TextView
            android:id="@+id/info"
            style="@style/GlobalFieldInfo"
            android:layout_column="0"
            android:layout_columnSpan="5"
            android:layout_row="3"
            android:layout_rowSpan="2"
            android:gravity="center_vertical|fill_horizontal"
            android:scaleType="fitXY"
            android:text="@string/defaults"
            android:typeface="monospace"
            android:visibility="visible" />
    </GridLayout>

    <LinearLayout
        android:id="@+id/panel_welcome"
        style="@style/ButtonBar"
        android:layout_column="1"
        android:layout_row="0"
        android:orientation="vertical"
        android:visibility="visible" >

        <Button
            android:id="@+id/btn_dialog_a"
            style="@style/ActionButton"
            android:text="@string/A" />

        <Button
            android:id="@+id/btn_dialog_b"
            style="@style/ActionButton"
            android:text="@string/B" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/panel_buy_unit"
        style="@style/ButtonBar"
        android:layout_column="1"
        android:layout_row="0"
        android:orientation="vertical"
        android:visibility="gone" >

        <Button
            android:id="@+id/btn_back_to_welcome"
            style="@style/ActionButton"
            android:text="@string/back" />

        <Button
            android:id="@+id/btn_a"
            style="@style/ActionButton"
            android:text="@string/A" />

        <Button
            android:id="@+id/btn_b"
            style="@style/ActionButton"
            android:text="@string/B" />

        <Button
            android:id="@+id/btn_c"
            style="@style/ActionButton"
            android:text="@string/C" />

        <Button
            android:id="@+id/btn_d"
            style="@style/ActionButton"
            android:text="@string/D" />

        <Button
            android:id="@+id/btn_e"
            style="@style/ActionButton"
            android:text="@string/E" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/panel_buy_count"
        style="@style/ButtonBar"
        android:layout_column="1"
        android:layout_row="0"
        android:orientation="vertical"
        android:visibility="gone" >

        <Button
            android:id="@+id/btn_back_to_buy_unit"
            style="@style/BuyCountButton"
            android:text="@string/back" />

        <Button
            android:id="@+id/btn_buy_1"
            style="@style/BuyCountButton"
            android:text="@string/buy_1" />

        <Button
            android:id="@+id/btn_buy_2"
            style="@style/BuyCountButton"
            android:text="@string/buy_2" />

        <Button
            android:id="@+id/btn_buy_5"
            style="@style/BuyCountButton"
            android:text="@string/buy_5" />

        <Button
            android:id="@+id/btn_buy_10"
            style="@style/BuyCountButton"
            android:text="@string/buy_10" />

        <Button
            android:id="@+id/btn_buy_25"
            style="@style/BuyCountButton"
            android:text="@string/buy_25" />

        <Button
            android:id="@+id/btn_buy_XX"
            style="@style/BuyCountButton"
            android:text="@string/buy_XX" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/panel_audience1"
        style="@style/ButtonBar"
        android:layout_column="1"
        android:layout_row="0"
        android:orientation="vertical"
        android:visibility="gone" >

        <Button
            android:id="@+id/btn_next1"
            style="@style/ActionButton"
            android:text="@string/next" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/panel_audience2"
        style="@style/ButtonBar"
        android:layout_column="1"
        android:layout_row="0"
        android:orientation="vertical"
        android:visibility="gone" >

        <Button
            android:id="@+id/btn_next2"
            style="@style/ActionButton"
            android:text="@string/next" />
    </LinearLayout>

</GridLayout>