<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/color_gray"
    android:columnCount="2"
    android:rowCount="2"
    android:useDefaultMargins="false" >

    <TextView
        android:id="@+id/villain_info"
        style="@style/GlobalFieldInfoFull"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_row="0"
        android:layout_rowSpan="2"
        android:gravity="center_vertical|fill_horizontal"
        android:scaleType="fitXY"
        android:text="@string/defaults"
        android:typeface="monospace"
        android:visibility="visible" />

    <ImageButton
        android:id="@+id/villain_logo"
        style="@style/VillainLogo"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:background="@drawable/transparent"
        android:contentDescription="@string/gField"
        android:scaleType="fitXY"
        android:src="@drawable/controls_contract" />

    <LinearLayout
        android:id="@+id/panel_audience1"
        style="@style/ButtonBar"
        android:layout_column="1"
        android:layout_row="0"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_next1"
            style="@style/ActionButton"
            android:text="@string/next" />
    </LinearLayout>

</GridLayout>