<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/color_gray"
    android:columnCount="2"
    android:rowCount="1" >

    <GridLayout
        android:columnCount="6"
        android:orientation="vertical"
        android:rowCount="5"
        android:useDefaultMargins="false" >

        <!-- row 0 -->

        <ImageButton
            android:id="@+id/bg"
            style="@style/ResidenceBg"
            android:layout_column="0"
            android:layout_columnSpan="5"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:layout_rowSpan="3"
            android:background="@drawable/residence_town_bg"
            android:contentDescription="@string/gField"
            android:scaleType="fitXY"
            android:src="@drawable/transparent" />

        <ImageButton
            android:id="@+id/exit"
            style="@style/GlobalFieldCell"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_row="0"
            android:background="@drawable/transparent"
            android:contentDescription="@string/gField"
            android:scaleType="fitXY"
            android:src="@drawable/icon_exit" />

        <ImageButton
            android:id="@+id/field_5_0"
            style="@style/GlobalFieldCell"
            android:layout_column="5"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:background="@drawable/controls_contract"
            android:contentDescription="@string/gField"
            android:scaleType="fitXY" />

        <!-- row 1 -->

        <ImageButton
            android:id="@+id/field_5_1"
            style="@style/GlobalFieldCell"
            android:layout_column="5"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:background="@drawable/controls_siege_0"
            android:contentDescription="@string/gField"
            android:scaleType="fitXY" />

        <!-- row 2 -->

        <ImageButton
            android:id="@+id/temp01"
            style="@style/GlobalFieldCell"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_row="2"
            android:background="@drawable/transparent"
            android:contentDescription="@string/gField"
            android:scaleType="fitXY"
            android:src="@drawable/transparent" />

        <ImageButton
            android:id="@+id/unit"
            style="@style/GlobalFieldCell"
            android:layout_column="1"
            android:layout_row="2"
            android:background="@drawable/transparent"
            android:contentDescription="@string/gField"
            android:scaleType="fitXY"
            android:src="@drawable/transparent" />

        <ImageButton
            android:id="@+id/field_5_2"
            style="@style/GlobalFieldCell"
            android:layout_column="5"
            android:layout_gravity="left|top"
            android:layout_row="2"
            android:background="@drawable/controls_magic_0"
            android:contentDescription="@string/gField"
            android:scaleType="fitXY" />
        <!-- row 3 -->

        <ImageButton
            android:id="@+id/field_5_3"
            style="@style/GlobalFieldCell"
            android:layout_column="5"
            android:layout_gravity="left|top"
            android:layout_row="3"
            android:background="@drawable/controls_pasle_opened"
            android:contentDescription="@string/gField"
            android:scaleType="fitXY" />
        <!-- row 4 -->

        <ImageButton
            android:id="@+id/field_5_4"
            style="@style/GlobalFieldCell"
            android:layout_column="5"
            android:layout_gravity="left|top"
            android:layout_row="4"
            android:background="@drawable/controls_money"
            android:contentDescription="@string/gField"
            android:scaleType="fitXY" />
        <!-- info -->

        <TextView
            android:id="@+id/info"
            style="@style/GlobalFieldInfo"
            android:layout_column="0"
            android:layout_columnSpan="5"
            android:layout_row="3"
            android:layout_rowSpan="2"
            android:gravity="center_vertical|fill_horizontal"
            android:scaleType="fitXY"
            android:text="@string/defaults"
            android:typeface="monospace"
            android:visibility="visible" />
    </GridLayout>

    <LinearLayout
        style="@style/ButtonBar"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_town_a"
            style="@style/ActionButton"
            android:text="@string/A" />

        <Button
            android:id="@+id/btn_town_b"
            style="@style/ActionButton"
            android:text="@string/B" />

        <Button
            android:id="@+id/btn_town_c"
            style="@style/ActionButton"
            android:text="@string/C" />

        <Button
            android:id="@+id/btn_town_d"
            style="@style/ActionButton"
            android:text="@string/D" />

        <Button
            android:id="@+id/btn_town_e"
            style="@style/ActionButton"
            android:text="@string/E" />
    </LinearLayout>

</GridLayout>