<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/GlobalLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="1" >

        <GridLayout
            android:columnCount="6"
            android:orientation="vertical"
            android:rowCount="6"
            android:useDefaultMargins="false" >

            <!-- row 0 -->

            <ImageButton
                android:id="@+id/field_0_0"
                style="@style/GlobalFieldCell"
                android:layout_column="0"
                android:layout_row="0"
                android:contentDescription="@string/gField"
                android:src="@drawable/transparent" />

            <ImageButton
                android:id="@+id/field_1_0"
                style="@style/GlobalFieldCell"
                android:layout_column="1"
                android:layout_row="0"
                android:contentDescription="@string/gField"
                android:src="@drawable/transparent" />

            <ImageButton
                android:id="@+id/field_2_0"
                style="@style/GlobalFieldCell"
                android:layout_column="2"
                android:layout_row="0"
                android:contentDescription="@string/gField"
                android:src="@drawable/transparent" />

            <ImageButton
                android:id="@+id/field_3_0"
                style="@style/GlobalFieldCell"
                android:layout_column="3"
                android:layout_row="0"
                android:contentDescription="@string/gField"
                android:src="@drawable/transparent" />

            <ImageButton
                android:id="@+id/field_4_0"
                style="@style/GlobalFieldCell"
                android:layout_column="4"
                android:layout_row="0"
                android:contentDescription="@string/gField"
                android:src="@drawable/transparent" />

            <ImageButton
                android:id="@+id/field_5_0"
                style="@style/GlobalFieldCell"
                android:layout_column="5"
                android:layout_row="0"
                android:background="@drawable/controls_contract"
                android:contentDescription="@string/gField" />

            <!-- row 1 -->

            <ImageButton
                android:id="@+id/field_0_1"
                style="@style/GlobalFieldCell"
                android:layout_column="0"
                android:layout_row="1"
                android:contentDescription="@string/gField"
                android:src="@drawable/transparent" />

            <ImageButton
                android:id="@+id/field_1_1"
                style="@style/GlobalFieldCell"
                android:layout_column="1"
                android:layout_row="1"
                android:contentDescription="@string/gField"
                android:src="@drawable/transparent" />

            <ImageButton
                android:id="@+id/field_2_1"
                style="@style/GlobalFieldCell"
                android:layout_column="2"
                android:layout_row="1"
                android:contentDescription="@string/gField"
                android:src="@drawable/transparent" />

            <ImageButton
                android:id="@+id/field_3_1"
                style="@style/GlobalFieldCell"
                android:layout_column="3"
                android:layout_row="1"
                android:contentDescription="@string/gField"
                android:src="@drawable/transparent" />

            <ImageButton
                android:id="@+id/field_4_1"
                style="@style/GlobalFieldCell"
                android:layout_column="4"
                android:layout_row="1"
                android:contentDescription="@string/gField"
                android:src="@drawable/transparent" />

            <ImageButton
                android:id="@+id/field_5_1"
                style="@style/GlobalFieldCell"
                android:layout_column="5"
                android:layout_row="1"
                android:background="@drawable/controls_siege_0"
                android:contentDescription="@string/gField" />

            <!-- row 2 -->

            <ImageButton
                android:id="@+id/field_0_2"
                style="@style/GlobalFieldCell"
                android:layout_column="0"
                android:layout_row="2"
                android:contentDescription="@string/gField"
                android:src="@drawable/transparent" />

            <ImageButton
                android:id="@+id/field_1_2"
                style="@style/GlobalFieldCell"
                android:layout_column="1"
                android:layout_row="2"
                android:contentDescription="@string/gField"
                android:src="@drawable/transparent" />

            <ImageButton
                android:id="@+id/field_2_2"
                style="@style/GlobalFieldCell"
                android:layout_column="2"
                android:layout_row="2"
                android:contentDescription="@string/gField"
                android:src="@drawable/transparent" />

            <ImageButton
                android:id="@+id/field_3_2"
                style="@style/GlobalFieldCell"
                android:layout_column="3"
                android:layout_row="2"
                android:contentDescription="@string/gField"
                android:src="@drawable/transparent" />

            <ImageButton
                android:id="@+id/field_4_2"
                style="@style/GlobalFieldCell"
                android:layout_column="4"
                android:layout_row="2"
                android:contentDescription="@string/gField"
                android:src="@drawable/transparent" />

            <ImageButton
                android:id="@+id/field_5_2"
                style="@style/GlobalFieldCell"
                android:layout_column="5"
                android:layout_row="2"
                android:background="@drawable/controls_magic_0"
                android:contentDescription="@string/gField" />
            <!-- row 3 -->

            <ImageButton
                android:id="@+id/field_0_3"
                style="@style/GlobalFieldCell"
                android:layout_column="0"
                android:layout_gravity="left|top"
                android:layout_row="3"
                android:contentDescription="@string/gField"
                android:scaleType="fitXY"
                android:src="@drawable/transparent" />

            <ImageButton
                android:id="@+id/field_1_3"
                style="@style/GlobalFieldCell"
                android:layout_column="1"
                android:layout_row="3"
                android:contentDescription="@string/gField"
                android:src="@drawable/transparent" />

            <ImageButton
                android:id="@+id/field_2_3"
                style="@style/GlobalFieldCell"
                android:layout_column="2"
                android:layout_row="3"
                android:contentDescription="@string/gField"
                android:src="@drawable/transparent" />

            <ImageButton
                android:id="@+id/field_3_3"
                style="@style/GlobalFieldCell"
                android:layout_column="3"
                android:layout_row="3"
                android:contentDescription="@string/gField"
                android:src="@drawable/transparent" />

            <ImageButton
                android:id="@+id/field_4_3"
                style="@style/GlobalFieldCell"
                android:layout_column="4"
                android:layout_row="3"
                android:contentDescription="@string/gField"
                android:src="@drawable/transparent" />

            <ImageButton
                android:id="@+id/field_5_3"
                style="@style/GlobalFieldCell"
                android:layout_column="5"
                android:layout_row="3"
                android:background="@drawable/controls_pasle_opened"
                android:contentDescription="@string/gField" />

            <!-- row 4 -->

            <ImageButton
                android:id="@+id/field_0_4"
                style="@style/GlobalFieldCell"
                android:layout_column="0"
                android:layout_row="4"
                android:contentDescription="@string/gField"
                android:src="@drawable/transparent" />

            <ImageButton
                android:id="@+id/field_1_4"
                style="@style/GlobalFieldCell"
                android:layout_column="1"
                android:layout_row="4"
                android:contentDescription="@string/gField"
                android:src="@drawable/transparent" />

            <ImageButton
                android:id="@+id/field_2_4"
                style="@style/GlobalFieldCell"
                android:layout_column="2"
                android:layout_row="4"
                android:contentDescription="@string/gField"
                android:src="@drawable/transparent" />

            <ImageButton
                android:id="@+id/field_3_4"
                style="@style/GlobalFieldCell"
                android:layout_column="3"
                android:layout_row="4"
                android:contentDescription="@string/gField"
                android:src="@drawable/transparent" />

            <ImageButton
                android:id="@+id/field_4_4"
                style="@style/GlobalFieldCell"
                android:layout_column="4"
                android:layout_row="4"
                android:contentDescription="@string/gField"
                android:src="@drawable/transparent" />

            <ImageButton
                android:id="@+id/field_5_4"
                style="@style/GlobalFieldCell"
                android:layout_column="5"
                android:layout_row="4"
                android:background="@drawable/controls_money"
                android:contentDescription="@string/gField" />
            <!-- info -->

            <ImageView
                android:id="@+id/player_cell"
                style="@style/GlobalFieldCell"
                android:layout_column="2"
                android:layout_row="2"
                android:background="@drawable/transparent"
                android:contentDescription="@string/gField"
                android:src="@drawable/transparent" />

            <ImageButton
                android:id="@+id/minimap"
                style="@style/Minimap"
                android:layout_column="0"
                android:layout_columnSpan="5"
                android:layout_row="0"
                android:layout_rowSpan="5"
                android:background="@drawable/transparent"
                android:contentDescription="@string/gField"
                android:src="@drawable/transparent"
                android:visibility="gone" />

            <TextView
                android:id="@+id/gInfo"
                style="@style/GlobalFieldInfo"
                android:layout_column="0"
                android:layout_columnSpan="5"
                android:layout_row="3"
                android:layout_rowSpan="2"
                android:gravity="center_vertical|fill_horizontal"
                android:scaleType="fitXY"
                android:text="@string/welcome"
                android:visibility="gone" />

            <FrameLayout
                android:id="@+id/btn_bar_m"
                style="@style/FullBackground"
                android:layout_column="0"
                android:layout_columnSpan="6"
                android:layout_row="0"
                android:layout_rowSpan="5"
                android:clickable="true"
                android:visibility="gone" >

                <LinearLayout
                    style="@style/MagicPanel"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/btn_m1"
                        style="@style/MagicButton"
                        android:text="@string/battle_magic_spell" >
                    </Button>

                    <Button
                        android:id="@+id/btn_m2"
                        style="@style/MagicButton"
                        android:text="@string/battle_magic_spell" >
                    </Button>

                    <Button
                        android:id="@+id/btn_m3"
                        style="@style/MagicButton"
                        android:text="@string/battle_magic_spell" >
                    </Button>

                    <Button
                        android:id="@+id/btn_m4"
                        style="@style/MagicButton"
                        android:text="@string/battle_magic_spell" >
                    </Button>

                    <Button
                        android:id="@+id/btn_m5"
                        style="@style/MagicButton"
                        android:text="@string/battle_magic_spell" >
                    </Button>

                    <Button
                        android:id="@+id/btn_m6"
                        style="@style/MagicButton"
                        android:text="@string/battle_magic_spell" >
                    </Button>

                    <Button
                        android:id="@+id/btn_m7"
                        style="@style/MagicButton"
                        android:text="@string/battle_magic_spell" >
                    </Button>
                </LinearLayout>
            </FrameLayout>
        </GridLayout>

        <LinearLayout
            style="@style/ButtonBar"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/days_counter"
                style="@style/DaysCounter"
                android:text="@string/counter000" />

            <ImageButton
                android:id="@+id/btn_map"
                style="@style/ActionIconButton"
                android:contentDescription="@string/defaults"
                android:src="@drawable/icon_gv"
                android:text="@string/map" />

            <ImageButton
                android:id="@+id/btn_move"
                style="@style/ActionIconButton"
                android:contentDescription="@string/defaults"
                android:src="@drawable/icon_gf"
                android:text="@string/fly" />

            <ImageButton
                android:id="@+id/btn_search"
                style="@style/ActionIconButton"
                android:contentDescription="@string/defaults"
                android:src="@drawable/icon_gs"
                android:text="@string/search" />

            <ImageButton
                android:id="@+id/btn_weakend"
                style="@style/ActionIconButton"
                android:contentDescription="@string/defaults"
                android:src="@drawable/icon_gw"
                android:text="@string/weakend" />

            <ImageButton
                android:id="@+id/btn_menu"
                style="@style/ActionIconButton"
                android:contentDescription="@string/defaults"
                android:src="@drawable/icon_gm"
                android:text="@string/menu" />
        </LinearLayout>
    </GridLayout>

    <ScrollView
        android:id="@+id/log_scroll"
        style="@style/LogPanel"
        android:layout_height="fill_parent"
        android:overScrollMode="always"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll" >

        <TextView
            android:id="@+id/log"
            style="@style/LogText" />
    </ScrollView>

</LinearLayout>